unpackaged/main/default/objects/OrderApi__Store__c/OrderApi__Store__c.object-meta.xml
<CustomObject>
    <description>Primary control object for publishing online stores</description>
    <label>Store</label>
    <nameField>
        <label>Store Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>