unpackaged/main/default/objects/OrderApi__Store__c/fields/DDApi__Direct_Debit_API_Service_Connection__c.field-meta.xml
<CustomField>
    <fullName>DDApi__Direct_Debit_API_Service_Connection__c</fullName>
    <description>GoCardless Connection configured in the API Services.** DEFAULTS: Business Group&#39;s Connection **</description>
    <inlineHelpText>GoCardless Connection configured in the API Services.** DEFAULTS: Business Group&#39;s Connection **</inlineHelpText>
    <label>Direct Debit API Service Connection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>