unpackaged/main/default/objects/OrderApi__Store__c/fields/DDApi__Enable_Direct_Debit__c.field-meta.xml
<CustomField>
    <fullName>DDApi__Enable_Direct_Debit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, users will be allowed to select Direct Debit as the payment method for subscription items in their cart.</description>
    <inlineHelpText>When checked, users will be allowed to select Direct Debit as the payment method for subscription items in their cart.</inlineHelpText>
    <label>Enable Direct Debit</label>
    <type>Checkbox</type>
</CustomField>