unpackaged/main/default/objects/OrderApi__Store__c/fields/LTE__Enable_Partial_Payments_for_Invoices__c.field-meta.xml
<CustomField>
    <fullName>LTE__Enable_Partial_Payments_for_Invoices__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, users will be able to define the payment amount for each invoice line.</description>
    <inlineHelpText>When checked, users will be able to define the payment amount for each invoice line.</inlineHelpText>
    <label>Enable Partial Payments for Invoices</label>
    <type>Checkbox</type>
</CustomField>