unpackaged/main/default/objects/OrderApi__Store__c/fields/OrderApi__Account_Match_Criteria__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Account_Match_Criteria__c</fullName>
    <description>Defines the matching rule for an account. If &quot;All Accounts&quot; is selected, the user can search by &quot;Account Search Result Fields CSV&quot;. If &quot;Domain Matching&quot; is selected, the system will automatically find an account for the contact using the given email.</description>
    <inlineHelpText>Defines the matching rule for an account. If &quot;All Accounts&quot; is selected, the user can search by &quot;Account Search Result Fields CSV&quot;. If &quot;Domain Matching&quot; is selected, the system will automatically find an account for the contact using the given email.</inlineHelpText>
    <label>Account Match Criteria</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All Accounts</fullName>
                <default>true</default>
                <label>All Accounts</label>
            </value>
            <value>
                <fullName>Domain Matching</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>