unpackaged/main/default/objects/OrderApi__Store__c/fields/OrderApi__Account_Search_Result_Fields_CSV__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Account_Search_Result_Fields_CSV__c</fullName>
    <description>Result fields will be displayed when searching for an account.</description>
    <inlineHelpText>Result fields will be displayed when searching for an account.</inlineHelpText>
    <label>Account Search Result Fields CSV</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>