unpackaged/main/default/objects/OrderApi__Store__c/fields/OrderApi__Additional_Contact_Match_Emails__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Additional_Contact_Match_Emails__c</fullName>
    <description>This field defines the contact email fields for contact matching. Accepts CSV values.</description>
    <inlineHelpText>This field defines the contact email fields for contact matching. Accepts CSV values.</inlineHelpText>
    <label>Additional Contact Match Email(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>