unpackaged/main/default/objects/OrderApi__Store__c/fields/OrderApi__Additional_Payment_Types__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Additional_Payment_Types__c</fullName>
    <description>Json structured list of additional payment types displayed on the checkout page.
[
      {
            &quot;label&quot; : &quot;&lt;Name of the tab&gt;&quot;,
            &quot;link&quot; : &quot;&lt;link where the page has to be navigated&gt;&quot;,
            &quot;button_label&quot; : &quot;&lt;label of the button&gt;&quot;
      }
]</description>
    <inlineHelpText>Json structured list of additional payment types displayed on the checkout page.
[{
            &quot;label&quot; : &quot;&lt;Name of the tab&gt;&quot;,
            &quot;link&quot; : &quot;&lt;link where the page has to be navigated&gt;&quot;,
            &quot;button_label&quot; : &quot;&lt;label of the button&gt;&quot;
}]</inlineHelpText>
    <label>Additional Payment Types</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>