unpackaged/main/default/objects/OrderApi__Store__c/fields/OrderApi__Contact_Match_Custom_Field__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Contact_Match_Custom_Field__c</fullName>
    <description>Specify any field on the Contact object (custom fields accepted) that you wish to use to match unauthenticated users to existing Contact records.</description>
    <inlineHelpText>Specify any field on the Contact object (custom fields accepted) that you wish to use to match unauthenticated users to existing Contact records.</inlineHelpText>
    <label>Contact Match Custom Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>