unpackaged/main/default/objects/OrderApi__Store__c/fields/OrderApi__Contact_Match_Rule__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Contact_Match_Rule__c</fullName>
    <description>Select the contact match rule to use when matching unauthenticated users to existing Contact records.</description>
    <inlineHelpText>Select the contact match rule to use when matching unauthenticated users to existing Contact records.</inlineHelpText>
    <label>Contact Match Rule</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EMAIL</fullName>
                <default>true</default>
                <label>EMAIL</label>
            </value>
            <value>
                <fullName>AND</fullName>
            </value>
            <value>
                <fullName>OR</fullName>
            </value>
            <value>
                <fullName>CUSTOM</fullName>
            </value>
            <value>
                <fullName>NONE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>