unpackaged/main/default/objects/OrderApi__Store__c/fields/OrderApi__Default_Checkout__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Default_Checkout__c</fullName>
    <description>Specifies whether customers will see guest checkout (&quot;Guest Checkout&quot;) or login to account (&quot;Account Login&quot;) as their first option during checkout.</description>
    <inlineHelpText>Specifies whether customers will see guest checkout (&quot;Guest Checkout&quot;) or login to account (&quot;Account Login&quot;) as their first option during checkout.</inlineHelpText>
    <label>Default Checkout</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Guest Checkout</fullName>
                <default>true</default>
                <label>Guest Checkout</label>
            </value>
            <value>
                <fullName>Account Login</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>