unpackaged/main/default/objects/OrderApi__Store__c/fields/OrderApi__Default_Store_Listing__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Default_Store_Listing__c</fullName>
    <description>This field defines the default view for the store listing page.</description>
    <inlineHelpText>This field defines the default view for the store listing page.</inlineHelpText>
    <label>Default Store Listing</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Large Tile</fullName>
                <default>true</default>
                <label>Large Tile</label>
            </value>
            <value>
                <fullName>Small Tile</fullName>
            </value>
            <value>
                <fullName>List</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>