unpackaged/main/default/objects/OrderApi__Store__c/fields/OrderApi__Enable_Access_Permissions__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Enable_Access_Permissions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked access to the Store is controlled by the related user-defined Access Permissions. Defaults unchecked - essentially enabling all public and authenticated Users access to the Store and related content.</description>
    <inlineHelpText>When checked access to the Store is controlled by the related user-defined Access Permissions. Defaults unchecked - essentially enabling all public and authenticated Users access to the Store and related content.</inlineHelpText>
    <label>RESERVED</label>
    <type>Checkbox</type>
</CustomField>