unpackaged/main/default/objects/OrderApi__Store__c/fields/OrderApi__Enable_Account_Search__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Enable_Account_Search__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When this field is checked, users can either search for an account or have their domain matched to an account. This is available for new user/contact functionality on authentication pages only.</description>
    <inlineHelpText>When this field is checked, users can either search for an account or have their domain matched to an account.</inlineHelpText>
    <label>Enable Account Search</label>
    <type>Checkbox</type>
</CustomField>