unpackaged/main/default/objects/OrderApi__Store__c/fields/OrderApi__Enable_Enhanced_List_View__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Enable_Enhanced_List_View__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this box displays the enhanced list view inside the estore.</description>
    <inlineHelpText>Checking this box displays the enhanced list view inside the estore.</inlineHelpText>
    <label>Enable Enhanced List View</label>
    <type>Checkbox</type>
</CustomField>