unpackaged/main/default/objects/OrderApi__Store__c/fields/OrderApi__Enable_Guest_Checkout__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Enable_Guest_Checkout__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables the Guest Checkout</description>
    <inlineHelpText>When checked, unauthenticated users will be allowed to process transactions without creating new user accounts in the system</inlineHelpText>
    <label>Enable Guest Checkout</label>
    <type>Checkbox</type>
</CustomField>