unpackaged/main/default/objects/OrderApi__Store__c/fields/OrderApi__Enable_Guest_Save_Payment__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Enable_Guest_Save_Payment__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable the ability to save payment on a guest checkout</description>
    <inlineHelpText>Enable the ability to save payment on a guest checkout</inlineHelpText>
    <label>Enable Guest Save Payment</label>
    <type>Checkbox</type>
</CustomField>