unpackaged/main/default/objects/OrderApi__Store__c/fields/OrderApi__Enable_Invoice_Payment_Option__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Enable_Invoice_Payment_Option__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, users will be allowed to select Invoice Me as a method of payment for an order.</description>
    <inlineHelpText>When checked, users will be allowed to select Invoice Me as a method of payment for an order.</inlineHelpText>
    <label>Enable Invoice Payment Option</label>
    <type>Checkbox</type>
</CustomField>