unpackaged/main/default/objects/OrderApi__Store__c/fields/OrderApi__Enable_Item_Instagram_Sharing__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Enable_Item_Instagram_Sharing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, this field will display the social icon to share items on their respective platform.</description>
    <inlineHelpText>When checked, this field will display the social icon to share items on their respective platform.</inlineHelpText>
    <label>RESERVED</label>
    <type>Checkbox</type>
</CustomField>