unpackaged/main/default/objects/OrderApi__Store__c/fields/OrderApi__Enable_Large_Tile_View__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Enable_Large_Tile_View__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checking this box displays the large tile view in the estore.</description>
    <inlineHelpText>Checking this box displays the large tile view in the estore.</inlineHelpText>
    <label>Enable Large Tile View</label>
    <type>Checkbox</type>
</CustomField>