unpackaged/main/default/objects/OrderApi__Store__c/fields/OrderApi__Enable_LIR_Payments__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Enable_LIR_Payments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, users will be able to define the payment amount for each sales order line.</description>
    <inlineHelpText>When checked, users will be able to define the payment amount for each sales order line.</inlineHelpText>
    <label>Enable Partial Payments for Line Items</label>
    <type>Checkbox</type>
</CustomField>