unpackaged/main/default/objects/OrderApi__Store__c/fields/OrderApi__Enable_Proforma_Invoice_Payment_Option__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Enable_Proforma_Invoice_Payment_Option__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, enables a portal user to send a proforma invoice email.</description>
    <inlineHelpText>When checked, enables a portal user to send a proforma invoice email.</inlineHelpText>
    <label>Enable Proforma Invoice Payment Option</label>
    <type>Checkbox</type>
</CustomField>