unpackaged/main/default/objects/OrderApi__Store__c/fields/OrderApi__Enable_Small_Tile_View__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Enable_Small_Tile_View__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this box displays the small tile view in the estore.</description>
    <inlineHelpText>Checking this box displays the small tile view in the estore.</inlineHelpText>
    <label>Enable Small Tile View</label>
    <type>Checkbox</type>
</CustomField>