unpackaged/main/default/objects/OrderApi__Store__c/fields/OrderApi__Enable_Tax_Inclusive_Pricing__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Enable_Tax_Inclusive_Pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this field will display the price as the sum of the default price and the default tax rate for all items displayed in this site.</description>
    <inlineHelpText>Checking this field will display the price as the sum of the default price and the default tax rate for all items displayed in this site.</inlineHelpText>
    <label>Enable Tax Inclusive Pricing</label>
    <type>Checkbox</type>
</CustomField>