unpackaged/main/default/objects/OrderApi__Store__c/fields/OrderApi__eStore_Sort_Fields__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__eStore_Sort_Fields__c</fullName>
    <description>Defines the fields used to sort the results in the eStore listing page. Please provide API names of fields to sort by.</description>
    <inlineHelpText>Defines the fields used to sort the results in the eStore listing page. Please provide API names of fields to sort by.</inlineHelpText>
    <label>eStore Sort Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>