unpackaged/main/default/objects/OrderApi__Store__c/fields/OrderApi__Fonteva_Supported_Currencies_CSV__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Fonteva_Supported_Currencies_CSV__c</fullName>
    <description>Populate with the additional supported Fonteva currencies for this Store.</description>
    <inlineHelpText>Populate with the additional supported Fonteva currencies for this Store.</inlineHelpText>
    <label>Fonteva Supported Currencies CSV</label>
    <length>255</length>
    <type>Text</type>
</CustomField>