unpackaged/main/default/objects/OrderApi__Store__c/fields/OrderApi__Gateway__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Gateway__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to default Payment Gateway for related Store.</description>
    <inlineHelpText>Link to default Payment Gateway for related Store.</inlineHelpText>
    <label>Payment Gateway</label>
    <referenceTo>OrderApi__Payment_Gateway__c</referenceTo>
    <relationshipLabel>Stores</relationshipLabel>
    <relationshipName>Payment_Gateway_Stores</relationshipName>
    <type>Lookup</type>
</CustomField>