unpackaged/main/default/objects/OrderApi__Store__c/fields/OrderApi__Guest_Checkout_Account__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Guest_Checkout_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Account Record for Guest Checkout Contacts to be linked to</description>
    <inlineHelpText>The default Account to use as a parent to any new Contact records created from guest (unauthenticated) users.</inlineHelpText>
    <label>Guest Checkout Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Stores</relationshipLabel>
    <relationshipName>Stores</relationshipName>
    <type>Lookup</type>
</CustomField>