unpackaged/main/default/objects/OrderApi__Store__c/fields/OrderApi__New_Contact_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__New_Contact_Account_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** Conditionally Required ** The user to be assigned as the owner of any new account or contact created when checking out as a guest in this store. Required when the store is configured to enable guest checkout.</description>
    <inlineHelpText>** Conditionally Required ** The user to be assigned as the owner of any new account or contact created when checking out as a guest in this store. Required when the store is configured to enable guest checkout.</inlineHelpText>
    <label>New Contact/Account Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Stores</relationshipName>
    <type>Lookup</type>
</CustomField>