unpackaged/main/default/objects/OrderApi__Store__c/fields/OrderApi__New_Contact_Fieldset_CSV__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__New_Contact_Fieldset_CSV__c</fullName>
    <description>The API Name of the Contact Object Fieldsets to display to users checking out as a guest/unauthenticated user. Note! First Name, Last Name, and Email are displayed by default.</description>
    <inlineHelpText>The API Name of the Contact Object Fieldsets to display to users checking out as a guest/unauthenticated user. Note! First Name, Last Name, and Email are displayed by default.</inlineHelpText>
    <label>New Contact Fieldset(s) CSV</label>
    <length>255</length>
    <type>Text</type>
</CustomField>