unpackaged/main/default/objects/OrderApi__Store__c/fields/OrderApi__New_Contact_Parent_Account_Rule__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__New_Contact_Parent_Account_Rule__c</fullName>
    <description>** Conditionally Required ** The account to use as the parent of new contacts created when checking out as a guest in this store. Required when the store is configured to enable guest checkout.</description>
    <inlineHelpText>** Conditionally Required ** The account to use as the parent of new contacts created when checking out as a guest in this store. Required when the store is configured to enable guest checkout.</inlineHelpText>
    <label>New Contact Parent Account Rule</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Guest Checkout Account</fullName>
                <default>true</default>
                <label>Guest Checkout Account</label>
            </value>
            <value>
                <fullName>Person Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>