unpackaged/main/default/objects/OrderApi__Store__c/fields/OrderApi__New_User_Profile_ID__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__New_User_Profile_ID__c</fullName>
    <inlineHelpText>System generated ID that is generated by Salesforce to be used for all new users. If not specified the default on the community will be used.</inlineHelpText>
    <label>New User Profile ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>