unpackaged/main/default/objects/OrderApi__Store__c/fields/OrderApi__Payment_Confirmation_Message_HTML__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Payment_Confirmation_Message_HTML__c</fullName>
    <description>Enter a message to display to users after successfully processing payment on the checkout page. Custom HTML or plain text are acceptible forms of input.</description>
    <inlineHelpText>Enter a message to display to users after successfully processing payment on the checkout page. Custom HTML or plain text are acceptible forms of input.</inlineHelpText>
    <label>Payment Confirmation Message HTML</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>