unpackaged/main/default/objects/OrderApi__Store__c/fields/OrderApi__Proforma_Payment_Option_Fieldset__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Proforma_Payment_Option_Fieldset__c</fullName>
    <description>The API Name of the Sales Order object fieldset to display to users during Proforma Payment Option selected.</description>
    <inlineHelpText>The API Name of the Sales Order object fieldset to display to users during Proforma Payment Option selected.</inlineHelpText>
    <label>Proforma Payment Option Fieldset</label>
    <length>255</length>
    <type>Text</type>
</CustomField>