unpackaged/main/default/objects/OrderApi__Store__c/fields/OrderApi__Require_Contact_Match_Custom_Field__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Require_Contact_Match_Custom_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whenc checked, the field defined in the Contact Match Custom Field will be required when checking out as a guest/unauthenticated user.</description>
    <inlineHelpText>When checked, the field defined in the Contact Match Custom Field will be required when checking out as a guest/unauthenticated user.</inlineHelpText>
    <label>Require Contact Match Custom Field</label>
    <type>Checkbox</type>
</CustomField>