unpackaged/main/default/objects/OrderApi__Store__c/fields/OrderApi__Theme__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Theme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SYSTEM</label>
    <referenceTo>PagesApi__Theme__c</referenceTo>
    <relationshipLabel>Stores</relationshipLabel>
    <relationshipName>Stores</relationshipName>
    <type>Lookup</type>
</CustomField>