unpackaged/main/default/objects/OrderApi__Store__c/listViews/OrderApi__All.listView-meta.xml
<ListView>
    <fullName>OrderApi__All</fullName>
    <columns>NAME</columns>
    <columns>OrderApi__Business_Group__c</columns>
    <columns>OrderApi__Enable_Access_Permissions__c</columns>
    <columns>OrderApi__Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>